# Graphflow

./: .dockerignore  .env.example  .gitignore  AGENT.md  CLAUDE.md  DESIGN.md  PLAN-Next.md  PLAN-v2.md  PLAN-v3.md  PLAN-v4.md  PLAN.md  README.md  conftest.py  design-doc-20260417-020150.md  new_concepts.md  pyproject.toml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: README.md  env.py  script.py.mako
apps/api/alembic/versions/: 0001_baseline.py  0002_status_transitions.py  0003_commitments.py  0004_commitment_sla.py  0005_handoff_records.py  0006_license_audit.py  0007_dissent.py  0008_scrimmage.py  0009_silent_consensus.py  0010_onboarding_state.py  0011_membrane_active.py  0012_meeting_transcripts.py  0013_kb_hierarchy.py  0014_gated_decisions.py  0015_gated_decision_text.py  0016_votes.py  0017_organizations.py  0018_task_progress.py  0019_kb_items.py  0020_kb_attachments.py  0021_personal_tasks.py  0022_kb_items_absorb_signals.py  0023_backfill_signals_to_kb.py  0024_drop_membrane_signals.py  0025_requirement_budget.py  0026_member_skill_tags.py  0027_decision_scope_stream.py  0028_frecency_columns.py  0029_stream_name.py
apps/api/src/workgraph_api/: __init__.py  demo_seed.py  deps.py  main.py  settings.py
apps/api/src/workgraph_api/routers/: __init__.py  auth.py  clarification.py  collab.py  commitments.py  composition.py  conflicts.py  decision_votes.py  delivery.py  demo.py  dissent.py  drift.py  events_stream.py  flows.py  gated_proposals.py  graph.py  handoff.py  intake.py  kb.py  kb_items.py  meetings.py  (+21 more)
apps/api/tests/: conftest.py  test_auth.py  test_canonical_event_registration.py  test_citations.py  test_clarification.py  test_clarification_fault_injection.py  test_collab.py  test_commitments.py  test_composition.py  test_conflicts.py  test_decision_membrane.py  test_decision_votes.py  test_decisions.py  test_delivery.py  test_dissent.py  test_drift_api.py  test_error_handler.py  test_events_stream.py  test_feishu_webhook.py  test_flow_projection.py  test_frecency_bumps.py  test_gated_proposals.py  test_graph.py  test_graph_replay.py  test_handoff.py  test_health.py  test_im_room_post.py  test_intake.py  test_intake_fault_injection.py  test_kb_hierarchy.py  test_kb_items.py  test_license_privacy.py  test_license_scope.py  test_meetings.py  test_membrane_active.py  test_membrane_api.py  test_observability.py  test_observer_scope.py  test_onboarding.py  test_org_graph.py  (+31 more)
apps/worker/: pyproject.toml
apps/worker/src/workgraph_worker/: __init__.py  main.py
apps/worker/tests/: test_boot.py
(+417 files in other folders)
