[project]
name = "workgraph-worker"
version = "0.1.0"
description = "WorkGraph AI — background worker (Celery wired in Phase 6+)."
requires-python = ">=3.11,<3.13"
dependencies = [
    "workgraph-observability",
    "workgraph-schemas",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workgraph_worker"]
